; ModuleID = '/home/carl/AnghaBench/micropython/py/extr_obj.c_mp_obj_id.c'
source_filename = "/home/carl/AnghaBench/micropython/py/extr_obj.c_mp_obj_id.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mp_obj_id(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  store i32 %0, i32* %3, align 4
  %5 = load i32, i32* %3, align 4
  %6 = sext i32 %5 to i64
  store i64 %6, i64* %4, align 8
  %7 = load i32, i32* %3, align 4
  %8 = call i32 @mp_obj_is_obj(i32 %7)
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %13, label %10

10:                                               ; preds = %1
  %11 = load i64, i64* %4, align 8
  %12 = call i32 @mp_obj_new_int(i64 %11)
  store i32 %12, i32* %2, align 4
  br label %23

13:                                               ; preds = %1
  %14 = load i64, i64* %4, align 8
  %15 = icmp sge i64 %14, 0
  br i1 %15, label %16, label %19

16:                                               ; preds = %13
  %17 = load i64, i64* %4, align 8
  %18 = call i32 @MP_OBJ_NEW_SMALL_INT(i64 %17)
  store i32 %18, i32* %2, align 4
  br label %23

19:                                               ; preds = %13
  %20 = load i64, i64* %4, align 8
  %21 = trunc i64 %20 to i32
  %22 = call i32 @mp_obj_new_int_from_uint(i32 %21)
  store i32 %22, i32* %2, align 4
  br label %23

23:                                               ; preds = %19, %16, %10
  %24 = load i32, i32* %2, align 4
  ret i32 %24
}

declare dso_local i32 @mp_obj_is_obj(i32) #1

declare dso_local i32 @mp_obj_new_int(i64) #1

declare dso_local i32 @MP_OBJ_NEW_SMALL_INT(i64) #1

declare dso_local i32 @mp_obj_new_int_from_uint(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
